--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,8 @@
 overwrite: true
-schema: "./src/schema/*.graphql"
-documents: "src/**/*.graphql"
+schema:
+  - "./src/schema/*.graphql"
+documents:
+  - "src/queries/*.graphql"
 generates:
   src/generated/graphql.tsx:
     plugins:
