--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "dicty-graphql-schema": "dictybase/dicty-graphql-schema",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tools": "^8.3.6",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typescript": "2.7.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
@@ -30,8 +33,7 @@
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "typescript": "4.8.3",
-    "@graphql-codegen/introspection": "2.2.1"
+    "typescript": "4.8.3"
   },
   "config": {
     "commitizen": {
