--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tools": "^8.3.6",
+    "jotai": "^1.8.4",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
