--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
+    "@types/babel__generator": "^7.6.4",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tools": "^8.3.6",
+    "jest-runtime": "^29.0.3",
     "jotai": "^1.8.4",
     "next": "12.3.0",
     "react": "18.2.0",
@@ -28,12 +31,20 @@
     "@graphql-codegen/typescript": "2.7.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
+    "@swc/core": "^1.3.3",
+    "@swc/jest": "^0.2.22",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.0.3",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
+    "ts-jest": "^29.0.1",
     "typescript": "4.8.3"
   },
   "config": {
