--- a/package.json
+++ b/package.json
@@ -44,8 +44,18 @@
     "eslint-config-next": "12.3.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
-    "ts-jest": "^29.0.1",
     "typescript": "4.8.3"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom",
+    "transform": {
+      "^.+\\.(t|j)sx?$": [
+        "@swc/jest"
+      ]
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setUpTests.js"
+    ]
   },
   "config": {
     "commitizen": {
