--- a/package.json
+++ b/package.json
@@ -16,6 +16,20 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
     "@types/babel__generator": "^7.6.4",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-compat": "^4.0.2",
+    "eslint-plugin-github": "^4.3.7",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.0.4",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^0.15.0",
+    "eslint-plugin-unicorn": "^43.0.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tools": "^8.3.6",
@@ -40,7 +54,7 @@
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.23.1",
+    "eslint": "^8.24.0",
     "eslint-config-next": "12.3.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
