refactor: Refactored component structure
Added state management and graphql requests to RocketQuery.tsx.

--- a/codegen.yml
+++ b/codegen.yml
@@ -4,11 +4,12 @@ schema:
 documents:
   - "src/queries/*.graphql"
 generates:
-  src/generated/graphql.tsx:
+  src/generated/graphql.ts:
     plugins:
       - "typescript"
       - "typescript-operations"
       - "typescript-react-apollo"
+      - "typescript-msw"
   ./graphql.schema.json:
     plugins:
       - "introspection"
