--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-tools": "^8.3.6",
     "jest-runtime": "^29.0.3",
     "jotai": "^1.8.4",
+    "msw": "^0.47.3",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -43,8 +44,10 @@
     "@graphql-codegen/cli": "2.12.0",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-msw": "^1.1.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
+    "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@swc/core": "^1.3.3",
     "@swc/jest": "^0.2.22",
     "@testing-library/jest-dom": "^5.16.5",
