--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "benbradley-graphql-experiments",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^16.16.x"
+  },
   "scripts": {
     "generate": "graphql-codegen --config codegen.yml",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test-coverage": "jest --coverage",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
