--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
     "semi": false,
     "trailingComma": "all",
-    "jsxBracketSameLine": true,
+    "bracketSameLine": true,
     "singleQuote": true,
     "endOfLine": "auto"
 }
