--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@swc/core": "^1.3.3",
     "@swc/jest": "^0.2.22",
+    "@testing-library/dom": "^8.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^29.0.3",
     "@types/node": "18.7.18",
