--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@material-ui/styles": "^4.11.5",
     "@mui/material": "^5.10.6",
     "@types/babel__generator": "^7.6.4",
     "eslint-config-airbnb": "^19.0.4",
