--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tools": "^8.3.6",
+    "immer": "^9.0.15",
     "jest-runtime": "^29.0.3",
     "jotai": "^1.8.4",
     "msw": "^0.47.3",
