--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,11 @@
       "esnext"
     ],
     "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true
   },
@@ -24,7 +20,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-   ],
+  ],
   "exclude": [
     "node_modules"
   ],
