--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-config-next": "12.3.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "react-select-event": "^5.5.1",
     "typescript": "4.8.3"
   },
   "config": {
