ci: testing env variables on workflow yaml config
- eslint should be skipped in runs

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,7 +1,12 @@
 name: Linting with eslint
 on: pull_request
+
+env:
+  ENABLE: ${{ false }}
+
 jobs:
   lint:
+    if: ${{ env.ENABLE }}
     name: lint
     runs-on: ubuntu-latest
     steps:
