ci: testing without env variable
- lint should be skipped

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,12 +1,8 @@
 name: Linting with eslint
 on: pull_request
-
-env:
-  ENABLE: ${{ false }}
-
 jobs:
   lint:
-    if: ${{ env.ENABLE }}
+    if: ${{ false }}
     name: lint
     runs-on: ubuntu-latest
     steps:
